Moved SFMC AppExchange Overview article from separate section to SFMC Config section

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -119,6 +119,7 @@ Many things in Salesforce Marketing Cloud aren't coding but have a massive impac
 - [System Data Views](./config/sfmc-config-system-data-views.mdx)
 - [Features On Demand](./config/sfmc-config-features-on-demand.mdx)
 - [Behavioral Triggers](./config/sfmc-config-behavioral-triggers.mdx)
+- [SFMC AppExchange Overview](./config/sfmc-config-appexchange-overview.mdx)
 
 <Button
     link='./docs/category/sfmc-config/'
@@ -139,17 +140,6 @@ Knowing how to code is one thing. Knowing what to code is another. In Use Cases,
 <Button
     link='./docs/category/sfmc-use-cases/'
     text='Read about SFMC Use Cases'
-/>
-
-## SFMC AppExchange
-
-There are over 4000 solutions in Salesforce AppExchange with few dozens dedicated to Salesforce Marketing Cloud. Here I want to go through the most interesting ones and get a bit deeper into their value proposition.
-
-<!-- - [SFMC AppExchange Overview](./appexchange/sfmc-appexchange-overview.mdx) -->
-
-<Button
-    link='./appexchange/sfmc-appexchange-overview'
-    text='Read about SFMC AppExchange'
 />
 
 ## Changes
