Rename cleanup for SFMC AppExchange article

--- a/docs/config/sfmc-config-appexchange-solutions.mdx
+++ b/docs/config/sfmc-config-appexchange-solutions.mdx
@@ -1,7 +1,7 @@
 ---
-id: sfmc-config-appexchange-overview
-title: SFMC AppExchange Overview
-sidebar_label: SFMC AppExchange
+id: sfmc-config-appexchange-solutions
+title: SFMC AppExchange Solutions
+sidebar_label: AppExchange Solutions
 description: Fill the feature gaps with plug-and-play apps. Salesforce Marketing Cloud AppExchange ready-to-use solution highlights.
 image: img/og/og-image-sfmc-appexchange.png
 tags: [Marketing Cloud, App, AppExchange]
