--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -119,7 +119,7 @@ Many things in Salesforce Marketing Cloud aren't coding but have a massive impac
 - [System Data Views](./config/sfmc-config-system-data-views.mdx)
 - [Features On Demand](./config/sfmc-config-features-on-demand.mdx)
 - [Behavioral Triggers](./config/sfmc-config-behavioral-triggers.mdx)
-- [SFMC AppExchange Overview](./config/sfmc-config-appexchange-overview.mdx)
+- [AppExchange Solutions](./config/sfmc-config-appexchange-solutions.mdx)
 
 <Button
     link='./docs/category/sfmc-config/'
