--- a/docs/config/sfmc-config-appexchange-solutions.mdx
+++ b/docs/config/sfmc-config-appexchange-solutions.mdx
@@ -103,7 +103,7 @@ If not, it's time to update your requirements - the list of needed features or t
 
 Sounds complex? Would you rather have a visual guide? Got you covered:
 
-<Image img={flowchart} />
+<Image img={flowchart} alt='Flowchart with visual representation of the When is AppExchange Worth It? analysis process'/>
 
 Looks complex? Would you rather have an example-based walkthrough? Got you covered as well in the next chapter:
 
@@ -155,7 +155,7 @@ Finally, we get to the last stop. After a quick search, we can find two solution
 
 Therefore we get to the update requirements step, where the company needs to prioritize between powerful, simple and free.
 
-<Image img={segmentation} />
+<Image img={segmentation} alt='Triangle with three corners - FREE, POWERFUL and SIMPLE - and three solutions: FREE and POWERFUL SQL Query Activity, FREE and SIMPLE Filtered Data Extensions, POWERFUL and SIMPLE DESelect Segment. '/>
 
 I hope it is now easier to find when AppExchange can solve Marketing Cloud requirements. With that, let's jump to the segmentation solutions available there.
 
@@ -163,7 +163,7 @@ I hope it is now easier to find when AppExchange can solve Marketing Cloud requi
 
 ### Query Studio
 
-<Image img={queryStudio} />
+<Image img={queryStudio} alt='Screenshot of the Query Studio User Interface'/>
 
 Creator | Pricing
 - | -
@@ -205,13 +205,14 @@ Despite some quirks, Query Studio is a huge timesaver and quality of life improv
 <Button
  link='https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3A00000FP3yFUAT'
  text='AppExchange'
+ newTab='true'
 />
 
 ---
 
 ### DESelect Segment
 
-<Image img={deselectSegment} />
+<Image img={deselectSegment} alt='Screenshot of the DESelect Segment User Interface'/>
 
 Creator | Pricing
 - | -
@@ -267,15 +268,17 @@ While I'm a big fan of [SQL](../sql/sfmc-sql-basics.mdx/), I know it's not a too
 <ButtonRow
  linkLeft='https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3A00000G0yE1UAJ'
  textLeft='AppExchange'
+ newTabLeft='true'
  linkRight='https://deselect.com/segment/'
  textRight='Website'
+ newTabRight='true'
 />
 
 ---
 
 ### Activation Studio
 
-<Image img={activationStudio} />
+<Image img={activationStudio} alt='Screenshot of the Activiation Studio User Interface'/>
 
 Creator | Pricing
 - | -
@@ -318,7 +321,9 @@ Especially with Scoring and Interaction-focused add-ons, it will be an excellent
 <ButtonRow
  linkLeft='https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3u00000PurpQEAR'
  textLeft='AppExchange'
+ newTabLeft='true'
  linkRight='https://activation-studio.com/drag-and-drop-segmentation-salesforce-marketing-cloud/'
  textRight='Website'
+ newTabRight='true'
 />
 
