Fixed missing JOIN alias + applied style guide to JOIN aliases in email send debugging query. Thank you Vishal Kumar C V for noticing the error

--- a/docs/sql/sfmc-sql-snippet-debugging-email-sends.mdx
+++ b/docs/sql/sfmc-sql-snippet-debugging-email-sends.mdx
@@ -41,38 +41,38 @@ SELECT
     , b.BounceSubcategory AS BounceSubcategory
     , b.SMTPBounceReason  AS BounceReason
     , u.EventDate         AS UnsubscribeDate
-FROM _Sent AS s
-    LEFT JOIN _Job AS job
+FROM _Sent                      AS s
+    LEFT JOIN _Job              AS job
         ON job.JobID = s.JobID
-    LEFT JOIN _Open AS o
+    LEFT JOIN _Open             AS o
         ON o.JobID = s.JobID
         AND o.ListID = s.ListID
         AND o.BatchID = s.BatchID
         AND o.SubscriberID = s.SubscriberID
         AND o.IsUnique = 1
-    LEFT JOIN _Click AS c
+    LEFT JOIN _Click            AS c
         ON s.JobID = c.JobID
         AND c.ListID = s.ListID
         AND c.BatchID = s.BatchID
         AND c.SubscriberID = s.SubscriberID
         AND c.IsUnique = 1
-    LEFT JOIN _Bounce AS b
+    LEFT JOIN _Bounce           AS b
         ON s.JobID = b.JobID
         AND b.ListID = s.ListID
         AND b.BatchID = s.BatchID
         AND b.SubscriberID = s.SubscriberID
         AND b.IsUnique = 1
-    LEFT JOIN _Unsubscribe AS u
+    LEFT JOIN _Unsubscribe      AS u
         ON s.JobID = u.JobID
         AND u.ListID = s.ListID
         AND u.BatchID = s.BatchID
         AND u.SubscriberID = s.SubscriberID
         AND u.IsUnique = 1
-    LEFT JOIN _JourneyActivity AS ja
+    LEFT JOIN _JourneyActivity  AS ja
         ON ja.JourneyActivityObjectID = s.TriggererSendDefinitionObjectID
-    LEFT JOIN _Journey AS
+    LEFT JOIN _Journey          AS j
         ON j.VersionID = ja.VersionID
-    LEFT JOIN _Subscribers AS sub
+    LEFT JOIN _Subscribers      AS sub
         ON sub.SubscriberKey = s.SubscriberKey
 WHERE s.EventDate >= DATEADD(DAY, -1, GETDATE())
 ```
