Link fixes to limit 404s

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -39,7 +39,7 @@ SSJS is an XX-century version of JavaScript paired with proprietary libraries cr
 - [SSJS Script Template](./ssjs/ssjs-snippet-ssjs-script-template.mdx)
 
 <Button
-    link='../docs/category/ssjs/'
+    link='./category/ssjs/'
     text='Read about SSJS'
 />
 
@@ -58,7 +58,7 @@ In this part, I am gathering selected elements of modern vanilla JavaScript that
 - [Export, Import & Document Roles in Salesforce Marketing Cloud](./js/js-snippet-export-import-document-sfmc-roles.mdx)
 
 <Button
-    link='../docs/category/javascript/'
+    link='./category/javascript/'
     text='Read about JavaScript'
 />
 
@@ -76,7 +76,7 @@ AMPScript is a proprietary scripting language in Salesforce Marketing Cloud alon
 - [AMPScript in SSJS](./ssjs/ssjs-snippet-ampscript-in-ssjs.mdx)
 
 <Button
-    link='../docs/category/ampscript/'
+    link='./category/ampscript/'
     text='Read about AMPScript'
 />
 
@@ -107,7 +107,7 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 - [Debugging Value Length](./sql/sfmc-sql-snippet-debugging-value-length.mdx)
 
 <Button
-    link='../docs/category/sfmc-sql/'
+    link='./category/sfmc-sql/'
     text='Read about SFMC SQL'
 />
 
@@ -122,7 +122,7 @@ Many things in Salesforce Marketing Cloud aren't coding but have a massive impac
 - [AppExchange Solutions](./config/sfmc-config-appexchange-solutions.mdx)
 
 <Button
-    link='./docs/category/sfmc-config/'
+    link='./category/sfmc-config/'
     text='Read about SFMC Config'
 />
 
@@ -138,7 +138,7 @@ Knowing how to code is one thing. Knowing what to code is another. In Use Cases,
 - [Contact Deletion Process](./usecase/sfmc-contact-deletion.mdx)
 
 <Button
-    link='./docs/category/sfmc-use-cases/'
+    link='./category/sfmc-use-cases/'
     text='Read about SFMC Use Cases'
 />
 
