Updated images on the home page

--- a/sites/licence.mdx
+++ b/sites/licence.mdx
@@ -27,6 +27,6 @@ Site design and its source code are adapted by me and available under the [MIT l
 ## Attribution
 
 - Logo is done by [Marek Jagusiak](https://jagusiak.eu)
-- Three graphics on main page are from [Undraw](https://undraw.co)
+- Profile photo is done by [Monochrom Photo](https://monochromphoto.pl)
 - Website is built with [Docusaurus 2](https://v2.docusaurus.io)
 - Search is powered by [Algolia](https://www.algolia.com)
